# Club-stat

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  output.txt
.github/workflows/: main.yml
lib/club/: CMakeLists.txt
lib/club/include/: club.hpp  time.hpp
lib/club/src/: club.cpp  time.cpp
lib/club/test/: CMakeLists.txt  club_tests.cpp  time_tests.cpp
src/: main.cpp
test/: tests.cpp
test_answers/: basic_ans.txt  custom_1_ans.txt  custom_2_ans.txt  errors_ans.txt  queue_ans.txt
test_data/: basic_test.txt  boundary_test.txt  custom_1.txt  custom_2.txt  errors_test.txt  queue_test.txt
